# sparkling

./: .env.example  API_INTEGRATION_GUIDE.md  CLAUDE.md  Cargo.toml  DATABASE_SCHEMA.md  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/application/: errors.rs
src/application/use_cases/: add_comment.rs  close_card.rs  create_card.rs  get_card_details.rs  list_board_cards.rs  list_boards.rs  list_my_cards.rs  mod.rs  move_card.rs  reopen_card.rs  search_cards.rs  update_card.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: board.rs  card.rs  column.rs  comment.rs  mod.rs  user.rs
src/domain/ports/: board_repository.rs  card_repository.rs  comment_repository.rs  event_repository.rs  mod.rs
src/domain/value_objects/: card_status.rs  fizzy_id.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: app_config.rs
src/infrastructure/persistence/: connection.rs  id_generator.rs  mod.rs  mysql_board_repo.rs  mysql_card_repo.rs  mysql_comment_repo.rs  mysql_event_repo.rs
src/infrastructure/telegram/: bot.rs  mod.rs
src/infrastructure/telegram/formatters/: board_formatter.rs  card_formatter.rs  error_formatter.rs  mod.rs
src/infrastructure/telegram/handlers/: board.rs  boards.rs  callbacks.rs  card.rs  close.rs  comment.rs  create.rs  edit.rs  help.rs  mod.rs  move_card.rs  my_cards.rs  reopen.rs  start.rs
src/infrastructure/telegram/keyboards/: board_selector.rs  card_actions.rs  column_selector.rs  mod.rs
src/shared/: errors.rs
