[package]
name = "fizzy_bot"
version = "0.1.0"
edition = "2021"
authors = ["fizzy_bot"]
description = "Telegram bot for Fizzy project management"

[dependencies]
# Telegram Bot Framework
teloxide = { version = "0.17", features = ["macros", "ctrlc_handler"] }

# Async Runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "signal"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "uuid",
]}

# UUID Generation (UUIDv7 for Fizzy compatibility)
uuid = { version = "1.11", features = ["v7"] }

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTML to text conversion (for rich text)
html2text = "0.12"

# CRC32 for search shard calculation (future use)
crc32fast = "1.4"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
